<resources>
    <string name="app_name">FindAndPlay</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_submit">SIGN IN</string>
    <string name="register_submit">SIGN UP</string>
    <string name="signup_hint">Don\'t have an account? <u>Sign Up</u></string>
    <string name="signin_hint">Have an account? <u>Sign In</u></string>
    <string name="signout"><u>Sign Out</u></string>
    <string name="back">Back</string>
    <string name="change_profile_change">Change Profile Change</string>
    <string name="pic_1">pic_1</string>
    <string name="pic_2">pic_2</string>
    <string name="pic_3">pic_3</string>
    <string name="pic_5">pic_5</string>
    <string name="pic_4">pic_4</string>
    <string name="pic_6">pic_6</string>
    <string name="short_back">◀</string>

    <!-- SlotMachine -->
    <string name="respinBtnTxt">SPIN SELECTED AGAIN</string>
    <string name="slot_machine_start">Start!</string>
    <string name="slot_machine_spin">SPIN!</string>
    <string name="picture_view">TODO</string>
    <string name="camera_symbol">📷</string>
    <string name="flip_symbol">🔄</string>
    <string name="todo">TODO</string>

    <!-- PlayerSelect -->
    <string name="player_color_change_text">The button for each child will change from <font color='#FFFF4444'>RED </font>to <font color='#337A42'>GREEN </font>once all required pictures have been taken.</string>
    <string name="spinner_prompt">Select a Group</string>

    <string name="profile_settings">Profile Settings</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="slot_machine">Slot Machine</string>
    <string name="camera_text">Camera</string>
    <string name="main_background_content">Main Background</string>
    <string name="ImaginativePlayTextContents"> Now to ask you some questions about what you collected!\n\nWhere did you find it? How did it get there?\n\nCan you think of any way to use these?\n\nWhat is your favorite game? Could you use these items in it?\n</string>
    <string name="return_to_main_menu">Back</string>
    <string name="hamburger_menu_return_button_text">Return</string>
    <string name="Burger_Menu_Help_button_Text">Help</string>
    <string name="burgerMenuDescr">Additional popup menu items.</string>
    <string name="audioBtnDescrip">Audio ON/OFF</string>
    <string name="cat1Descrip">Category 1 Item</string>
    <string name="cat2Descrip">Category 2 Item</string>
    <string name="cat4Descr">Category 4 Item</string>
    <string name="slotDescrip">Slot Machine</string>
    <string name="cat3Descr">Category 3 Item</string>

    <!-- USerInfo -->
    <string name="name2">Name</string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="group">Group</string>
    <string name="your_name">Your Name</string>
    <string name="your_nickname">Your Nickname</string>
    <string name="your_age">Your Age</string>
    <string name="your_group">Your Group</string>
    <string name="create_account">Create Account</string>
    <string name="update_user_data">Update User</string>
    <string name="selectGrouptitle">Select A Group</string>
    <string name="constrPlayTitle">Constructive Play Rules</string>
    <string name="selectchildTitle">Select A Child</string>
    <string name="selectBtn">Select</string>

    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="helpview1">test1</string>
    <string name="helpview0">test0</string>
    <string name="helpview2">test2</string>
    <string name="end">End</string>
    <string name="refreshBtn">Refresh</string>
    <string name="congratsTxt">Congratulations</string>
    <string name="picOfWeekTxt">Picture of The Week</string>
    <string name="generalPicWeekDescr">This week\'s picture of the week</string>
    <string name="rulesBtn">RULES</string>
    <string name="createGroupBtn">Create Group</string>
    <string name="PlayBtn">Play!</string>
    <string name="pickOfTheWeekBtn">Picture Of The Week</string>
    <string name="selectPictureOfTheWeekBtn">Select Picture Of The Week</string>
    <string name="sign_inLink">sign in</string>
    <string name="sign_upLbl">sign up</string>
    <string name="sudent_admin">sudent/admin</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="cloudBackDesc">Clouded backgorund</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_player">Add Player</string>
</resources>
