<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthLoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:windowSoftInputMode="stateAlwaysHidden|adjustResize">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:paddingHorizontal="30dp"
                >

                <EditText
                    android:id="@+id/login_email"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_email"
                    />

                <EditText
                    android:id="@+id/login_pass"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/login_pass"
                    android:layout_below="@+id/login_email"
                    android:layout_marginBottom="15dp"
                    />

                <Button
                    android:id="@+id/login_submit"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:hint="@string/login_submit"
                    android:layout_below="@+id/login_pass"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="10dp"
                    app:backgroundTint="@android:color/holo_orange_dark"
                    />

                <TextView
                    android:id="@+id/signup_hint"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/signup_hint"
                    android:textColor="#555"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/login_submit"
                    android:clickable="true"
                    />

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
