<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetPictureOfTheWeek">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/picture_week_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/picOfWeekTxt"
                    android:textColor="#232121"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_weight="2"/>


                <TextView
                    android:id="@+id/name_child"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/congratsTxt"
                    android:textColor="#232121"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/pic_of_week"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    app:srcCompat="@drawable/blank" />

                <Button
                    android:id="@+id/refresh_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#4CAF50"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/refreshBtn"
                    android:textSize="20sp"
                    app:cornerRadius="50dp" />

            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>